# ogl_gen_reflection_source

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: debug.cpp  debug.hpp  input_args.cpp  input_args.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
test/: enemy_component.hpp  game_components.hpp
